[package]
name = "ovh"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0"
description = "Async wrapper around OVH's API."
readme = "README.md"
keywords = ["ovh", "api"]
categories = ["api-bindings"]
repository = "https://github.com/MicroJoe/rust-ovh"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "charset", "http2", "macos-system-configuration", # keep default-features except for default-tls
    "rustls-tls", # use rustls-tls instead of default-tls to not be dependent on OpenSSL at runtime
    "json" # required to deserialize request
]}
tokio = "1"
futures = "0.3"
sha1_smol = { version = "1", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
phf = { version = "0.11", features = ["macros"] }
configparser = "3"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
